Serialization changes for Spark separate service (I303).