@@ -46,6 +46,7 @@
 		    --add-opens common.config/roart.common.config=spring.core
 		    --add-opens db/roart.db.model=org.hibernate.orm.core
 		    --add-opens iclij.core/roart.action=spring.core
+		    --add-opens java.base/sun.nio.ch=stockstat.shadow.spark
 		  </argLine>
 		</configuration>
          </plugin>
